Clean up migrated JUnit tests